Update portfolio content and navigation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
       name="description"
       content="Portafolio profesional de ingeniería de software y productos web de alto impacto."
     />
+    <meta name="application-name" content="CiaphasC.dev" />
+    <meta name="theme-color" content="#050608" />
+    <meta name="apple-mobile-web-app-title" content="CiaphasC.dev" />
+    <link rel="canonical" href="https://ciaphasc.dev/" />
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <meta property="og:locale" content="es_ES" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="CiaphasC.dev" />
+    <meta property="og:title" content="CiaphasC.dev | Systems Engineer" />
+    <meta
+      property="og:description"
+      content="Portafolio profesional de Brad Cuenca: arquitectura de software, performance y experiencias web de alto impacto."
+    />
+    <meta property="og:url" content="https://ciaphasc.dev/" />
+    <meta property="og:image" content="https://ciaphasc.dev/og-image.png" />
+    <meta property="og:image:secure_url" content="https://ciaphasc.dev/og-image.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Vista previa del portafolio CiaphasC.dev" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="CiaphasC.dev | Systems Engineer" />
+    <meta
+      name="twitter:description"
+      content="Portafolio profesional de Brad Cuenca: arquitectura de software, performance y experiencias web de alto impacto."
+    />
+    <meta name="twitter:image" content="https://ciaphasc.dev/og-image.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
